# bci-iv-2a-decoding

./: .gitignore  CLAUDE.md  README.md  notes.md  pyproject.toml  requirements.txt
notebooks/: 01_explore_data.ipynb  02_preprocess.ipynb  03_csp_lda.ipynb  04_results.ipynb
scripts/: iterate_outcomes.py  iterate_outcomes2.py
src/mi_decoder/: csp.py  data.py  lda.py  preprocess.py
src/scoring/: cv_scoring.py
tests/: test_csp.py
