[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mi-decoder"
version = "0.1.0"
description = "Motor imagery decoder on BCI Competition IV Dataset 2a"
requires-python = ">=3.10"
dependencies = [
    "moabb>=1.1.0",
    "mne>=1.6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]